# bazel-front-end

./: .bazelignore  .gitignore  BUILD  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
react-project-1/: .babelrc  BUILD.bazel  defs.bzl  package.json  webpack.config.js
react-project-1/src/: index.jsx
react-webpack/: README.md
react-webpack/src/: app.jsx
umi-app/: .bazelrc  BUILD.bazel  package.json
