bazel_dep(name = "aspect_rules_js", version = "2.0.2")
bazel_dep(name = "aspect_rules_webpack", version = "0.16.0")
bazel_dep(name = "aspect_rules_swc", version = "2.0.1")
# bazel_dep(name = "rules_nodejs", version = "6.2.0")

# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
# node.toolchain(node_version = "20.13.1")

# pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
# use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")