load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//umi-app:umi/package_json.bzl", "bin")
load("//react-project-1:defs.bzl", "print_hello")

npm_link_all_packages(
    name = "node_modules",
)

js_library(
    name = "lib",
    srcs = ["package.json", ".umirc.ts"] + glob(["src/**/*.tsx", "src/**/*.ts", "src/**/*.css", "src/**/*.less", ".umi/**/*", "src/**/*.jpg"]),
    deps = [
        ":node_modules/umi",
        ":node_modules/typescript",
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom"
    ],
)

print_hello(bin)

bin.umi(
    name = "umi-build",
    srcs = [
        ":lib",
    ],
    outs = glob(["dist/**"]),
    args = [
        "build",
    ],
    chdir = package_name(),
    log_level = "debug",
)